@@ -2,6 +2,12 @@ Revision history for Perl extension CGI::Header.
 
   - Add tests for CGI::Header::Redirect
   - Fix POD: "CGI::Header::Redirect#is_empty always returns false"
+  - Update dispatch tables to maintain this module more easily
+  - Add the following class methods:
+      * lc
+      * ucfirst
+      * time2str
+      * normalize
 
 0.32  Mar 9th, 2013
 
